# AnimAI

./: readme.md
api/: .gitignore  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 18f696174cf3_first_name_added_in_user_table.py  364f92d412bd_create_user_table.py  3fa66c78471d_project_enum_updated.py  648bb245709a_removed_user_added_project_in_table.py  884068bdabf6_removed_user_added_project_in_table.py  d35ee04bf2ba_removed_first_name_added_in_user_table.py  ea7ae72b8165_project_enum_updated.py  f1dbd51528dc_avatar_added_in_user_table.py  f97da4351087_removed_user_added_project_in_table.py
api/app/: db.py  main.py
api/app/config/: settings.py
api/app/models/: project.py  user.py
api/app/services/: redis_service.py
worker/: dummy.json  graph.mermaid  main.py  main_v1.py  pyproject.toml
worker/config/: settings.py
worker/doc/: project.md
worker/nodes/: clean_up_node.py  code_generator_node.py  code_validate_node.py  compiler_node.py  debug_node.py  graph.py  lesson_planner_node.py  routers.py  script_writter_node.py  story_board_node.py
worker/prompts/: code_generator_prompt.py  debugger_prompt.py  lesson_planner_prompt.py  script_writer_prompt.py  storyboard_prompt.py
worker/schema/: message_schema.py  project_schema.py  state_schema.py
worker/schema/code_generator/: code_generator_schema.py
worker/schema/lesson_planner/: lesson_planner_schema.py
worker/schema/script_writer/: script_writer_schema.py
worker/services/: cloudinary_service.py  code_validator.py  llm_client.py  project_service.py  redis_service.py
(+11 files in other folders)
