[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.138.1",
    "loguru>=0.7.3",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=8.0.1",
    "sqlmodel>=0.0.39",
]
