[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-fireworks>=1.3.1",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "manim>=0.20.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]
