[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-fireworks>=1.3.1",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "loguru>=0.7.3",
    "manim>=0.20.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyflakes>=3.4.0",
    "python-dotenv>=1.2.2",
]
